--- a/package.json
+++ b/package.json
@@ -4,8 +4,13 @@
   "description": "Bookshelf Backend",
   "main": "./src/server.js",
   "scripts": {
-    "start": "nodemon ./src/server.js",
+    "start": "node ./src/server.js",
+    "start-dev": "nodemon ./src/server.js",
+    "start-prod": "NODE_ENV=production node ./src/server.js",
     "lint": "eslint ./"
+  },
+  "engines": {
+    "node": "14.x"
   },
   "author": "Abdul Aziz Ahwan",
   "license": "ISC",
