--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Bookshelf Backend",
   "main": "./src/server.js",
   "scripts": {
-    "start": "node ./src/server.js",
+    "start": "nodemon ./src/server.js",
     "start-dev": "nodemon ./src/server.js",
     "start-prod": "NODE_ENV=production node ./src/server.js",
     "lint": "eslint ./"
